# graphrag

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  deps.py  main.py
app/api/: auth.py  documents.py  evaluate.py  health.py  jobs.py  query.py  upload.py
app/core/: auth.py  exceptions.py  limiter.py
app/db/: neo4j.py  postgres.py  qdrant.py  redis.py  vllm.py
app/evaluate/: metrics.py
app/generate/: llm.py  prompt.py  session.py  streamer.py
app/ingest/: chunker.py  embedder.py  graph_extract.py  graph_indexer.py  ocr.py  pipeline.py  vector_indexer.py
app/models/: orm.py  schemas.py
app/retrieve/: graph.py  orchestrator.py  reranker.py  router.py  tokenizer.py  vector.py
app/utils/: hashing.py  logging.py
app/workers/: celery_app.py  cleanup.py  tasks.py
docs/: ARCHITECTURE.md  OPERATIONS.md
eval/: golden_qa.json  raw_results.json  raw_results_after.json  raw_results_before.json  results.md  results_after.md  results_before.md  run_eval.py
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: build_eval_pdfs.py  build_eval_pngs.py  build_fixture_pdf.py  cleanup_orphans.py  create_api_key.py  download_models.sh  init_db.py  init_neo4j.py  init_qdrant.py
tests/integration/: conftest.py  test_api_e2e.py  test_ingest_e2e.py
tests/load/: locustfile.py
tests/unit/: test_api_routes.py  test_auth.py  test_chunker.py  test_db_clients.py  test_evaluate_endpoint.py  test_evaluate_metrics.py  test_exceptions.py  test_extra_coverage.py  (+16 more)
(+1 files in other folders)
