[project]
name = "llm-engine"
version = "0.1.0"
description = "Hybrid RAG (Vector + Graph) LLM Engine for DGX Spark"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "python-multipart>=0.0.20",

    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",

    "redis>=5.2",
    "celery>=5.4",

    "qdrant-client>=1.12",
    "neo4j>=5.27",

    "httpx>=0.28",
    "openai>=1.59",
    "FlagEmbedding>=1.3",
    "graphrag>=0.5",

    "pypdf>=5.1",
    "pdf2image>=1.17",
    "pillow>=11.0",
    "tenacity>=9.0",

    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "locust>=2.32",
    "reportlab>=4.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG", "RET"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
